--- a/dark.css
+++ b/dark.css
@@ -11,3 +11,13 @@ body {
 	padding-right: 7%;
 	color: white;
 }
+
+.footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: black;
+	color: white;
+	text-align: center;
+}
