--- a/dark.css
+++ b/dark.css
@@ -13,11 +13,11 @@ body {
 }
 
 .footer {
-	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
 	background-color: black;
 	color: white;
 	text-align: right;
+	padding-right: 2%;
 }
