--- a/dark.css
+++ b/dark.css
@@ -1,9 +1,10 @@
 .nav-item:active {
-	background-color: #222222
+	background-color: #222222;
 }
 
 body {
-	background-color: #050505
+	background-color: #050505;
+	padding-top: 70px;
 }
 
 .container-fluid {
